<?xml version="1.0" encoding="utf-8"?>
<resources>
 
    <string name="app_name">BodyWatch</string>
    <string name="Weigh_in_to_start">Weigh-in\nto get started</string>
    <string name="new_entry">Weigh in</string>
    <string name="view_all_entries">View All Entries</string>
    <string name="save">Save</string>
    <string name="facts_percent_hint">Enter decimals in %</string>
    <string name="facts_kg_hint">Enter decimals in kg</string>
    <string name="facts_regdate_label">Registration date</string>
    <string name="facts_weight_label">Weight</string>
    <string name="facts_body_fat_label">Body fat</string>
    <string name="facts_body_water_label">Body water</string>
    <string name="facts_muscle_ratio_label">Muscle ratio</string>
    <string name="facts_bone_label">Bone weight</string>
    <string name="error_requiredField">Mandatory field</string>
    
    <string name="title_activity_create_new_entry">Create New Entry</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_all_entries">All Entries</string>
    <string name="delete_selected">Delete selected</string>
    <string name="delete_selected_explanation">You are about to delete the selected records, this action CAN NOT be undone. Are you sure?</string>
    <string name="delete_selected_success">Records deleted successfully</string>
    
</resources>
